# LogFileRepo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: log.h
src/: log.cpp  main.cpp
